// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен отрендерить микроразметку 1`] = `
<span
  itemScope={true}
  itemType="https://schema.org/Product"
>
  <meta
    content="FORD"
    itemProp="brand"
  />
  <meta
    content="белый"
    itemProp="color"
  />
  <meta
    content="https://avatars.mds.yandex.net/get-autoru-vos/2175772/52498ffdbf2816143ca3d5a6506a2ef5/320x240"
    itemProp="image"
  />
  <meta
    content="Ford EcoSport I"
    itemProp="name"
  />
  <meta
    content={2017}
    itemProp="productionDate"
  />
  <OfferMicroData
    itemProp="offers"
    link={[Function]}
    offer={
      Object {
        "actions": Object {
          "edit": true,
        },
        "additional_info": Object {
          "exchange": true,
        },
        "availability": "IN_STOCK",
        "badges": Array [],
        "category": "cars",
        "category_id": "15",
        "color_hex": "FAFBFB",
        "counters": Object {
          "all": 321,
          "calls_all": 1,
          "calls_daily": 0,
          "daily": 105,
          "favorite_all": 45,
          "favorite_remove_all": 3,
          "favorite_total_all": 42,
          "phone_all": 0,
          "phone_daily": 0,
        },
        "description": "Тест. Тест.",
        "documents": Object {
          "custom_cleared": true,
          "license_plate": "р322сн58",
          "owners_number": 1,
          "pts_original": true,
          "purchase_date": Object {
            "day": 2,
            "month": 10,
            "year": 2017,
          },
          "vin": "Z6FLXXEC*LH****28",
          "vin_resolution": "OK",
          "warranty": true,
          "warranty_expire": Object {
            "day": 5,
            "month": 10,
            "year": 2020,
          },
          "year": 2017,
        },
        "hash": "1970f439",
        "id": "1085562758",
        "is_favorite": false,
        "owner_expenses": Object {
          "transport_tax": Object {
            "boost": 1,
            "holding_period_month": 12,
            "horse_power": 231,
            "rate": 75,
            "rid": 213,
            "tax_by_year": 17325,
            "year": 2019,
          },
        },
        "price_history": Array [],
        "price_info": Object {
          "EUR": 11747,
          "RUR": 855000,
          "USD": 13413,
          "currency": "RUR",
          "price": 855000,
        },
        "price_predict": Object {
          "predict": Object {
            "from": 197000,
            "to": 198000,
          },
        },
        "saleId": "1085562758-1970f439",
        "search_position": 5,
        "section": "used",
        "section_id": "1",
        "seller": Object {},
        "seller_type": "PRIVATE",
        "service_prices": Object {},
        "services": Array [],
        "state": Object {
          "image_urls": Array [
            Object {
              "preview": "data:image/jpeg;base64,/9j/4AAQSkZJRgABAgAAAQABAAD/2wBDAAMCAgMCAgMDAwMEAwMEBQgFBQQEBQoHBwYIDAoMDAsKCwsNDhIQDQ4RDgsLEBYQERMUFRUVDA8XGBYUGBIUFRT/2wBDAQMEBAUEBQkFBQkUDQsNFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBT/wAARCAASABgDASIAAhEBAxEB/8QAHwAAAQUBAQEBAQEAAAAAAAAAAAECAwQFBgcICQoL/8QAtRAAAgEDAwIEAwUFBAQAAAF9AQIDAAQRBRIhMUEGE1FhByJxFDKBkaEII0KxwRVS0fAkM2JyggkKFhcYGRolJicoKSo0NTY3ODk6Q0RFRkdISUpTVFVWV1hZWmNkZWZnaGlqc3R1dnd4eXqDhIWGh4iJipKTlJWWl5iZmqKjpKWmp6ipqrKztLW2t7i5usLDxMXGx8jJytLT1NXW19jZ2uHi4+Tl5ufo6erx8vP09fb3+Pn6/8QAHwEAAwEBAQEBAQEBAQAAAAAAAAECAwQFBgcICQoL/8QAtREAAgECBAQDBAcFBAQAAQJ3AAECAxEEBSExBhJBUQdhcRMiMoEIFEKRobHBCSMzUvAVYnLRChYkNOEl8RcYGRomJygpKjU2Nzg5OkNERUZHSElKU1RVVldYWVpjZGVmZ2hpanN0dXZ3eHl6goOEhYaHiImKkpOUlZaXmJmaoqOkpaanqKmqsrO0tba3uLm6wsPExcbHyMnK0tPU1dbX2Nna4uPk5ebn6Onq8vP09fb3+Pn6/9oADAMBAAIRAxEAPwDyV9Wg1Hx63g7RNCfVtaEnklXmS3QSY+783PHOcgYwa73VNF8D/CbwHqN/4s0qw1nxYq5GmQaskzRu2cFgh2qigE7RucgcsBycX47fCb4g6r4j12XTvBDXmlTzSymXTVjgmUyCTf5kzQF3TLk4L8AAA8Ajx/4ffs/+INVj8QnxB4fm0y+8mD+zNQlljMFvMJVLO6qwJBQEYwQcnJHWtJ4511zSlbyMI4KNF2jE9c0e78KfFLU9Mg8FaPDb+J7W5GpxWtsreTPsVN+RI23eu1PuryF5NFeo/s0fAY+CtZOoyazPrV28IgceSI4lJJOQSWx1x8vXA4orjniJN+7ZrzOyNCKWtz1v4wX9zD4uW1juJUtfKB8lXITJY5+Xp2FeU2jtc65crMxlVXAAc5AG73oorx4bHpS3PovwFEkdrbhEVRhT8oxRRRXZHY55bn//2Q==",
              "sizes": Object {
                "1200x900": "picture-of-cat",
                "320x240": "//avatars.mds.yandex.net/get-autoru-vos/2175772/52498ffdbf2816143ca3d5a6506a2ef5/320x240",
                "456x342": "picture-of-cat",
                "456x342n": "picture-of-cat",
                "small": "picture-of-cat",
              },
            },
          ],
          "images_count": 1,
          "mileage": 18500,
          "state_not_beaten": true,
          "upload_url": "upload_url",
        },
        "status": "ACTIVE",
        "tags": Array [
          "allowed_for_credit",
          "vin_resolution_ok",
        ],
        "vehicle_info": Object {
          "configuration": Object {
            "body_type": "ALLROAD_5_DOORS",
            "doors_count": 0,
            "human_name": "Внедорожник 5 дв",
            "id": "20104322",
          },
          "equipment": Object {
            "12v-socket": true,
            "16-inch-wheels": true,
            "abs": true,
            "airbag-driver": true,
            "airbag-passenger": true,
            "alarm": true,
            "ashtray-and-cigarette-lighter": true,
            "audiopreparation": true,
            "aux": true,
            "body-mouldings": true,
            "computer": true,
            "condition": true,
            "dark-interior": true,
            "door-sill-panel": true,
            "driver-seat-updown": true,
            "electro-mirrors": true,
            "electro-window-back": true,
            "electro-window-front": true,
            "engine-proof": true,
            "esp": true,
            "fabric-seats": true,
            "feedback-alarm": true,
            "front-seats-heat": true,
            "immo": true,
            "isofix": true,
            "light-sensor": true,
            "lock": true,
            "mirrors-heat": true,
            "multi-wheel": true,
            "passenger-seat-updown": true,
            "rain-sensor": true,
            "remote-engine-start": true,
            "seat-transformation": true,
            "sport-pedals": true,
            "steel-wheels": true,
            "tyre-pressure": true,
            "usb": true,
            "volume-sensor": true,
            "wheel-configuration1": true,
            "wheel-configuration2": true,
            "wheel-power": true,
            "xenon": true,
          },
          "mark_info": Object {
            "code": "FORD",
            "logo": Object {
              "name": "mark-logo",
              "sizes": Object {
                "big-logo": "//avatars.mds.yandex.net/get-verba/787013/2a00000164d56362bd2b8f89e2f33f524d83/dealer_logo",
                "logo": "//avatars.mds.yandex.net/get-verba/787013/2a00000164d56362bd2b8f89e2f33f524d83/logo",
              },
            },
            "name": "Ford",
            "numeric_id": 3152,
            "ru_name": "Форд",
          },
          "model_info": Object {
            "code": "ECOSPORT",
            "name": "EcoSport",
            "ru_name": "",
          },
          "steering_wheel": "LEFT",
          "super_gen": Object {
            "id": "20104320",
            "name": "I",
            "price_segment": "MEDIUM",
            "purpose_group": "CITY",
            "year_from": 2014,
            "year_to": 2018,
          },
          "tech_param": Object {
            "displacement": 1596,
            "engine_type": "GASOLINE",
            "gear_type": "FORWARD_CONTROL",
            "human_name": "1.6 AMT (122 л.с.)",
            "id": "20104325",
            "power": 122,
            "power_kvt": 90,
            "transmission": "ROBOT",
          },
        },
        "year": 2017,
      }
    }
  />
  <meta
    content="Тест. Тест."
    itemProp="description"
  />
</span>
`;

exports[`должен сгенерировать описание, если нет description 1`] = `
<span
  itemScope={true}
  itemType="https://schema.org/Product"
>
  <meta
    content="FORD"
    itemProp="brand"
  />
  <meta
    content="белый"
    itemProp="color"
  />
  <meta
    content="https://avatars.mds.yandex.net/get-autoru-vos/2175772/52498ffdbf2816143ca3d5a6506a2ef5/320x240"
    itemProp="image"
  />
  <meta
    content="Ford EcoSport I"
    itemProp="name"
  />
  <meta
    content={2017}
    itemProp="productionDate"
  />
  <OfferMicroData
    itemProp="offers"
    link={[Function]}
    offer={
      Object {
        "actions": Object {
          "edit": true,
        },
        "additional_info": Object {
          "exchange": true,
        },
        "availability": "IN_STOCK",
        "badges": Array [],
        "category": "cars",
        "category_id": "15",
        "color_hex": "FAFBFB",
        "counters": Object {
          "all": 321,
          "calls_all": 1,
          "calls_daily": 0,
          "daily": 105,
          "favorite_all": 45,
          "favorite_remove_all": 3,
          "favorite_total_all": 42,
          "phone_all": 0,
          "phone_daily": 0,
        },
        "description": "",
        "documents": Object {
          "custom_cleared": true,
          "license_plate": "р322сн58",
          "owners_number": 1,
          "pts_original": true,
          "purchase_date": Object {
            "day": 2,
            "month": 10,
            "year": 2017,
          },
          "vin": "Z6FLXXEC*LH****28",
          "vin_resolution": "OK",
          "warranty": true,
          "warranty_expire": Object {
            "day": 5,
            "month": 10,
            "year": 2020,
          },
          "year": 2017,
        },
        "hash": "1970f439",
        "id": "1085562758",
        "is_favorite": false,
        "owner_expenses": Object {
          "transport_tax": Object {
            "boost": 1,
            "holding_period_month": 12,
            "horse_power": 231,
            "rate": 75,
            "rid": 213,
            "tax_by_year": 17325,
            "year": 2019,
          },
        },
        "price_history": Array [],
        "price_info": Object {
          "EUR": 11747,
          "RUR": 855000,
          "USD": 13413,
          "currency": "RUR",
          "price": 855000,
        },
        "price_predict": Object {
          "predict": Object {
            "from": 197000,
            "to": 198000,
          },
        },
        "saleId": "1085562758-1970f439",
        "search_position": 5,
        "section": "used",
        "section_id": "1",
        "seller": Object {},
        "seller_type": "PRIVATE",
        "service_prices": Object {},
        "services": Array [],
        "state": Object {
          "image_urls": Array [
            Object {
              "preview": "data:image/jpeg;base64,/9j/4AAQSkZJRgABAgAAAQABAAD/2wBDAAMCAgMCAgMDAwMEAwMEBQgFBQQEBQoHBwYIDAoMDAsKCwsNDhIQDQ4RDgsLEBYQERMUFRUVDA8XGBYUGBIUFRT/2wBDAQMEBAUEBQkFBQkUDQsNFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBT/wAARCAASABgDASIAAhEBAxEB/8QAHwAAAQUBAQEBAQEAAAAAAAAAAAECAwQFBgcICQoL/8QAtRAAAgEDAwIEAwUFBAQAAAF9AQIDAAQRBRIhMUEGE1FhByJxFDKBkaEII0KxwRVS0fAkM2JyggkKFhcYGRolJicoKSo0NTY3ODk6Q0RFRkdISUpTVFVWV1hZWmNkZWZnaGlqc3R1dnd4eXqDhIWGh4iJipKTlJWWl5iZmqKjpKWmp6ipqrKztLW2t7i5usLDxMXGx8jJytLT1NXW19jZ2uHi4+Tl5ufo6erx8vP09fb3+Pn6/8QAHwEAAwEBAQEBAQEBAQAAAAAAAAECAwQFBgcICQoL/8QAtREAAgECBAQDBAcFBAQAAQJ3AAECAxEEBSExBhJBUQdhcRMiMoEIFEKRobHBCSMzUvAVYnLRChYkNOEl8RcYGRomJygpKjU2Nzg5OkNERUZHSElKU1RVVldYWVpjZGVmZ2hpanN0dXZ3eHl6goOEhYaHiImKkpOUlZaXmJmaoqOkpaanqKmqsrO0tba3uLm6wsPExcbHyMnK0tPU1dbX2Nna4uPk5ebn6Onq8vP09fb3+Pn6/9oADAMBAAIRAxEAPwDyV9Wg1Hx63g7RNCfVtaEnklXmS3QSY+783PHOcgYwa73VNF8D/CbwHqN/4s0qw1nxYq5GmQaskzRu2cFgh2qigE7RucgcsBycX47fCb4g6r4j12XTvBDXmlTzSymXTVjgmUyCTf5kzQF3TLk4L8AAA8Ajx/4ffs/+INVj8QnxB4fm0y+8mD+zNQlljMFvMJVLO6qwJBQEYwQcnJHWtJ4511zSlbyMI4KNF2jE9c0e78KfFLU9Mg8FaPDb+J7W5GpxWtsreTPsVN+RI23eu1PuryF5NFeo/s0fAY+CtZOoyazPrV28IgceSI4lJJOQSWx1x8vXA4orjniJN+7ZrzOyNCKWtz1v4wX9zD4uW1juJUtfKB8lXITJY5+Xp2FeU2jtc65crMxlVXAAc5AG73oorx4bHpS3PovwFEkdrbhEVRhT8oxRRRXZHY55bn//2Q==",
              "sizes": Object {
                "1200x900": "picture-of-cat",
                "320x240": "//avatars.mds.yandex.net/get-autoru-vos/2175772/52498ffdbf2816143ca3d5a6506a2ef5/320x240",
                "456x342": "picture-of-cat",
                "456x342n": "picture-of-cat",
                "small": "picture-of-cat",
              },
            },
          ],
          "images_count": 1,
          "mileage": 18500,
          "state_not_beaten": true,
          "upload_url": "upload_url",
        },
        "status": "ACTIVE",
        "tags": Array [
          "allowed_for_credit",
          "vin_resolution_ok",
        ],
        "vehicle_info": Object {
          "configuration": Object {
            "body_type": "ALLROAD_5_DOORS",
            "doors_count": 0,
            "human_name": "Внедорожник 5 дв",
            "id": "20104322",
          },
          "equipment": Object {
            "12v-socket": true,
            "16-inch-wheels": true,
            "abs": true,
            "airbag-driver": true,
            "airbag-passenger": true,
            "alarm": true,
            "ashtray-and-cigarette-lighter": true,
            "audiopreparation": true,
            "aux": true,
            "body-mouldings": true,
            "computer": true,
            "condition": true,
            "dark-interior": true,
            "door-sill-panel": true,
            "driver-seat-updown": true,
            "electro-mirrors": true,
            "electro-window-back": true,
            "electro-window-front": true,
            "engine-proof": true,
            "esp": true,
            "fabric-seats": true,
            "feedback-alarm": true,
            "front-seats-heat": true,
            "immo": true,
            "isofix": true,
            "light-sensor": true,
            "lock": true,
            "mirrors-heat": true,
            "multi-wheel": true,
            "passenger-seat-updown": true,
            "rain-sensor": true,
            "remote-engine-start": true,
            "seat-transformation": true,
            "sport-pedals": true,
            "steel-wheels": true,
            "tyre-pressure": true,
            "usb": true,
            "volume-sensor": true,
            "wheel-configuration1": true,
            "wheel-configuration2": true,
            "wheel-power": true,
            "xenon": true,
          },
          "mark_info": Object {
            "code": "FORD",
            "logo": Object {
              "name": "mark-logo",
              "sizes": Object {
                "big-logo": "//avatars.mds.yandex.net/get-verba/787013/2a00000164d56362bd2b8f89e2f33f524d83/dealer_logo",
                "logo": "//avatars.mds.yandex.net/get-verba/787013/2a00000164d56362bd2b8f89e2f33f524d83/logo",
              },
            },
            "name": "Ford",
            "numeric_id": 3152,
            "ru_name": "Форд",
          },
          "model_info": Object {
            "code": "ECOSPORT",
            "name": "EcoSport",
            "ru_name": "",
          },
          "steering_wheel": "LEFT",
          "super_gen": Object {
            "id": "20104320",
            "name": "I",
            "price_segment": "MEDIUM",
            "purpose_group": "CITY",
            "year_from": 2014,
            "year_to": 2018,
          },
          "tech_param": Object {
            "displacement": 1596,
            "engine_type": "GASOLINE",
            "gear_type": "FORWARD_CONTROL",
            "human_name": "1.6 AMT (122 л.с.)",
            "id": "20104325",
            "power": 122,
            "power_kvt": 90,
            "transmission": "ROBOT",
          },
        },
        "year": 2017,
      }
    }
  />
  <meta
    content="Год выпуска: 2017. Пробег: 18 500 км. Кузов: внедорожник 5 дв.. Цвет: белый. Двигатель: 1.6 л / 122 л.с. / Бензин. Комплектация: 42 опции. Налог: 17 325 ₽ / год. Коробка: роботизированная. Привод: передний. Руль: Левый. Состояние: Не требует ремонта. Владельцы: 1 владелец. Владение: 1 год и 10 месяцев. Таможня: Растаможен. Гарантия: До октября 2020. Обмен: Рассмотрю варианты. VIN: Z6FLXXEC*LH****28. Госномер: р322сн58. "
    itemProp="description"
  />
</span>
`;
